--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1,9 +1,4 @@
 en:
-  admin_js:
-    admin:
-      site_settings:
-        categories:
-          TODO_plugin_name: "Plugin Name"
   js:
-    discourse_plugin_name:
-      placeholder: placeholder
+    imsv3:
+      title: "IMS v3"
