Add locale files

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2,6 +2,7 @@ en:
   js:
     imsv3:
       title: "IMS v3"
-      importance: "Importance"
-      feasibility: "Feasibility"
-      sort: "Sort"
+      columns:
+        importance: "Importance"
+        feasibility: "Feasibility"
+        sort: "Sort"
